# NemaContext

./: .gitignore  CLAUDE.md  EMERGENT_CONTEXT.md  README.md  checkpoints_embryo_future_set_canonicalizer_smoke_cpu.pt  checkpoints_embryo_future_set_ctx256_g32_dt40_multi_recon_canonicalizer_train.pt  checkpoints_embryo_future_set_ctx256_g32_dt40_multi_recon_token_readout_anchor_train.pt  checkpoints_embryo_future_set_token_readout_anchor_smoke_cpu.pt  experiments_analysis.py  main.py  pyproject.toml
analysis_results/: structure_analysis.json
docs/: ARCHITECTURE_WHOLE_ORGANISM_AR.md  AUTOREGRESSIVE_COMPLETE.md  AUTOREGRESSIVE_MIGRATION.md  CROSSMODAL_FEATURES.md  CSHAPER_INTEGRATION.md  DATA_INTEGRATION.md  DESIGN_DECISIONS_GENE_CONTEXT_WORLD_MODEL.md  EXPERIMENT_HISTORY.md  GENE_CONTEXT_BASELINE.md  PHASE4_FINDINGS.md  PROGRESS_SUMMARY.md  PROJECT_STRUCTURE.md  README.md  REPO_STRUCTURE.md  ROADMAP.md  TECHNICAL_APPROACH.md  TRIMODAL_INTEGRATION.md  WORM_FORECASTING_RESULTS.md  WORM_MAINLINE.md
examples/: README.md  analyze_cshaper.py  analyze_large2025.py  analyze_mat_files.py  analyze_sd2.py  autoregressive_simulation.py  build_anndata.py  build_enhanced_anndata.py  compare_trajectories.py  discover_lineage_knowledge.py  discover_priors.py  evaluate_cshaper.py  evaluate_emergent.py  evaluate_modality_completion.py  full_perturbation_test.py  multimodal_embedding.py  paired_perturbation.py  perturbation_experiment.py  plan_cshaper_integration.py  test_autoregressive_simulation.py  test_cshaper.py  test_cshaper_complete.py  test_dynamic_simulation.py  train_autoregressive_dynamic.py  train_autoregressive_full.py  train_autoregressive_simple.py  train_emergent.py  train_nema.py  train_trimodal_crossmodal.py  train_wormguides.py  verify_crossmodal.py  verify_trimodal.py
presentation/: Makefile  README.md  nemacontext_progress.tex
scripts/: analyze_embryo_future_latent_stability.py  env_uv.sh  gene_context_audit.py  (+13 more)
(+211 files in other folders)
