[project]
name = "nemacontext"
version = "0.1.0"
description = "Modeling C. elegans Development as Token Tree Generation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0",
    "scanpy",
    "anndata",
    "geoopt",
    "torch-geometric",
    "torchsde",
    "pandas",
    "scipy",
    "requests",
    "tqdm",
]

[dependency-groups]
dev = [
    "ipykernel",
    "matplotlib",
    "seaborn",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
