[project]
name = "nemacontext"
version = "0.1.0"
description = "Modeling C. elegans Development as Token Tree Generation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "scanpy",
    "anndata",
    "geoopt",
    "torch-geometric",
    "torchsde",
    "pandas",
    "scipy",
    "requests",
    "tqdm",
    "scikit-misc",  # Required for scanpy seurat_v3 HVG
    "geomloss",     # Differentiable Sinkhorn distance (BROT distributional loss)
    "pot",          # Python Optimal Transport (W1 evaluation metrics)
    "threadpoolctl>=3.6.0",
]

[dependency-groups]
dev = [
    "ipykernel",
    "matplotlib",
    "seaborn",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
